<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent> -->

    <groupId>com.example.app</groupId>
    <artifactId>multi-module-app</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Multi-Module Spring Boot Application</name>
    <description>Spring Boot 3.2.x multi-module application</description>

    <modules>
        <module>common</module>
        <module>user</module>
        <module>product</module>
        <module>inventory</module>
        <module>order</module>
        <module>payment</module>
        <module>billing</module>
        <module>notifications</module>
        <module>admin</module>
        <module>regression-test</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        
        <!-- Dependency versions -->
        <spring-boot.version>3.2.5</spring-boot.version>
        <mapstruct.version>1.6.2</mapstruct.version>
        <testcontainers.version>1.19.8</testcontainers.version>
        <springdoc.version>2.5.0</springdoc.version>
        <jacoco.version>0.8.12</jacoco.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            
            <!-- Testcontainers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Springdoc OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>check</id>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <rule>
                                        <element>PACKAGE</element>
                                        <limits>
                                            <limit>
                                                <counter>LINE</counter>
                                                <value>COVEREDRATIO</value>
                                                <minimum>0.80</minimum>
                                            </limit>
                                        </limits>
                                    </rule>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                    <configuration>
                        <excludes>
                            <!-- Entities/Models - JPA entities without business logic -->
                            <exclude>**/entity/**</exclude>
                            
                            <!-- DTOs - Simple Data Transfer Objects (POJOs) -->
                            <exclude>**/dto/**</exclude>
                            
                            <!-- Domain objects - Simple Request/Response/Domain classes (POJOs) -->
                            <exclude>**/domain/**</exclude>
                            
                            <!-- Generated MapStruct mapper implementations -->
                            <exclude>**/*MapperImpl.class</exclude>
                            <exclude>**/*Mapper$*Impl.class</exclude>
                            
                            <!-- Spring Boot Application main classes -->
                            <exclude>**/Application.class</exclude>
                            
                            <!-- Test configuration classes -->
                            <exclude>**/config/TestApplication.class</exclude>
                            
                            <!-- Repository interfaces - Spring Data JPA -->
                            <exclude>**/repository/**</exclude>
                            
                            <!-- Enums -->
                            <exclude>**/*Status.class</exclude>
                            <exclude>**/*Type.class</exclude>
                            <exclude>**/*Role.class</exclude>
                            
                            <!-- Simple exception classes (keep exception handlers that have business logic) -->
                            <exclude>**/exception/BusinessException.class</exclude>
                            <exclude>**/exception/EntityNotFoundException.class</exclude>
                            <exclude>**/exception/ApiError.class</exclude>
                            <exclude>**/exception/InsufficientStockException.class</exclude>
                            <exclude>**/exception/PaymentProcessingException.class</exclude>
                            
                            <!-- Adapter interfaces (keep implementations) -->
                            <exclude>**/adapter/*Adapter.class</exclude>
                            
                            <!-- Provider interfaces (keep implementations) -->
                            <exclude>**/provider/*Provider.class</exclude>
                            
                            <!-- Service interfaces (keep implementations) -->
                            <exclude>**/service/*Service.class</exclude>
                            
                            <!-- Mapper interfaces (MapStruct) - implementations are generated -->
                            <exclude>**/mapper/*Mapper.class</exclude>
                            
                            <!-- Package-info files -->
                            <exclude>**/package-info.class</exclude>
                            
                            <!-- Module-info files -->
                            <exclude>**/module-info.class</exclude>
                        </excludes>
                        <!-- Note: The following are INCLUDED in coverage (not excluded):
                             - Service implementations (*ServiceImpl)
                             - Controller classes (*Controller)
                             - Config classes (*Config)
                             - Filter classes (*Filter)
                             - Utility classes with business logic (*Util)
                             - Exception handlers (GlobalExceptionHandler)
                             - Adapter implementations (*AdapterImpl)
                             - Provider implementations (*ProviderImpl)
                        -->
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
        </plugins>
    </build>
</project>

